# features/api/v1/applications/schemas.ts
@@ -21,7 +21,7 @@ const ApplicantData = z.object({
   region: z.string().optional(),
   city: z.string().optional(),
   campus: z.string().optional(),
-  nationalIdType: z.enum(NationalIdTypeEnum.enumValues),
+  nationalIdType: z.enum(NationalIdTypeEnum.enumValues).optional(),
   // referralOther: z.string().optional(),
   emergencyContactName: z.string().optional(),
   emergencyContactPhone: z.string().optional(),
@@ -77,7 +77,7 @@ const FlatApplicationInput = z.object({
   region: z.string().optional(),
   city: z.string().optional(),
   campus: z.string().optional(),
-  nationalIdType: z.enum(NationalIdTypeEnum.enumValues),
+  nationalIdType: z.enum(NationalIdTypeEnum.enumValues).optional(),
   // referralOther: z.string().optional(),
   emergencyContactName: z.string().optional(),
   emergencyContactPhone: z.string().optional(),
